# gh-custodian

./: .gitignore  .justfile  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  devenv.nix  devenv.yaml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: actions.yml  codeql-analysis.yml  release.yml  rust-ci.yml  scorecard.yml
src/: main.rs
src/client/: mod.rs
src/client/github/: mod.rs  orgs.rs  types.rs
tests/: init.rs
