[package]
name = "gh-custodian"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.29"
octorust = "0.10.0"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "time" ] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
