[package]
name = "gh-custodian"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0.100"
async-trait = "~0.1"
clap = { version = "~4.5", features = ["derive"] }
clap-verbosity-flag = "~3.0"
env_logger = "~0.11.8"
http = "1.4.0"
log = "~0.4.29"
octorust = "~0.10"
# parse_link_header = "~0.4"
percent-encoding = "~2.3"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "time" ] }

[dev-dependencies]
assert_cmd = "~2.1"
predicates = "~3.1"
